[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-test-gen-python"
version = "0.1.0"
description = "A PoC AST-based automatic test generator for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "rich",
    "pytest-html",
    "pytest-json-report",
]

[project.scripts]
auto-test-gen = "core_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core_engine*"]
